Fixed spacing, widths, and font size of users and events #search

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -822,6 +822,9 @@ div#search-results-container {
 				position: relative;
 				margin: 0 auto;
 				form {
+					label {
+						width: 100%;
+					}
 					input {
 						width: 100%;
 					}
@@ -870,14 +873,17 @@ div#search-results-container {
 				margin: 0 auto;
 				box-shadow: none;
 				height: auto;
-				h4 {
-					padding: 25px;
-					margin-bottom: 0;
-				}
 				form {
-					input {
+					h4 {
+						font-size: 26px;
+						padding: 25px;
+					}
+					label {
+						font-size: 18px;
 						width: 100%;
-						margin: 15px auto;
+					}
+					input {
+						margin-bottom: 15px;
 					}
 					button {
 						margin-top: 5px;
